@@ -4,6 +4,7 @@ Refactor NuGet feed functionality to use NuGetFeed class
 Add trusted NuGet feeds to settings to allow searching for NuGet packages in all trusted feeds
 Support searching for Earliest, Latest, Exact or Any NuGet package (default is Latest)
 Reset startcount when using Restart-BcContainer
+Issue 3277 Run-ALCops uses wrong CodeAnalysis dll path
 
 6.0.3
 Just-In-Time install dotnet 8.0.0 for Business Central version 24 or above (needed by alc.exe)
